# odoo-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/odoo_mcp/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  odoo_client.py  prompts.py  resources.py  safety.py  server.py  types.py
src/odoo_mcp/tools/: __init__.py  crm.py  generic.py
tests/: conftest.py  helpers.py  test_config.py  test_crm_tools.py  test_generic_tools.py  test_odoo_client.py  test_prompts.py  test_resources.py  test_runtime.py  test_safety.py
